DAS-2330 - update SMAP L3 reference files and some comments

--- a/test/hoss/HOSS_Regression.ipynb
+++ b/test/hoss/HOSS_Regression.ipynb
@@ -81,7 +81,7 @@
    },
    "outputs": [],
    "source": [
-    "harmony_host_url = 'https://harmony.uat.earthdata.nasa.gov'"
+    "harmony_host_url = 'https://harmony.sit.earthdata.nasa.gov'"
    ]
   },
   {
@@ -718,8 +718,16 @@
     "  * `harmony-opendap-subsetter` to perform HOSS operations and extract a rectangular portion of the longitude latitude grid. This will match the bounding box.\n",
     "  * `maskfill-harmony` to fill any pixels in the rectangular array segment.\n",
     "\n",
-    "TODO: Add Environment.PROD once NSIC updates SPL3FTP_E in the production environment.\n"
+    "TODO: Add Environment.PROD once NSIDC updates SPL3FTP_E in the production environment.\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eb679f35",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -758,7 +766,7 @@
    "outputs": [],
    "source": [
     "if test_is_configured(hoss_bbox_spatial_info, 'collection'):\n",
-    "    hoss_bbox_spatial_file_name = 'hoss_bbox_spatial.nc4'\n",
+    "    hoss_bbox_spatial_file_name = 'hoss_bbox_3d_no_dimensions_zyx_order.nc4'\n",
     "    hoss_bbox_spatial_bbox = BBox(w=-70, s=60, e=-10, n=85)\n",
     "    hoss_bbox_spatial_request = Request(\n",
     "        collection=hoss_bbox_spatial_info['collection'],\n",
@@ -781,11 +789,11 @@
     "\n",
     "    compare_results_to_reference_file(\n",
     "        hoss_bbox_spatial_file_name,\n",
-    "        'reference_files/hoss_bbox_spatial_reference.nc4',\n",
+    "        'reference_files/hoss_bbox_3d_no_dimensions_zyx_order_reference.nc4',\n",
     "        '/',\n",
     "    )\n",
     "\n",
-    "    print_success('HOSS bounding box spatial request.')\n",
+    "    print_success('HOSS bounding box 3d no dimensions nominal order request.')\n",
     "else:\n",
     "    print(f'Skipping - HOSS is not configured for this test in {harmony_environment}.')"
    ]
@@ -795,7 +803,7 @@
    "id": "f25e7fb2",
    "metadata": {},
    "source": [
-    "### HOSS polygon spatial subset for 3D variables:  <a id=\"spatial-subset\"></a>\n",
+    "### HOSS polygon spatial subset for 3D variables - not nominal order ('yxz' order):  <a id=\"spatial-subset\"></a>\n",
     "\n",
     "A polygon spatial subset for 3D variables:\n",
     " This request for a polygon subset of 3D variables in a SPL3SMP granule will be fulfilled using three steps. This can be observed via  https://harmony.uat.earthdata.nasa.gov/workflow-ui  endpoint of Harmony.\n",
@@ -804,7 +812,7 @@
     "* `harmony-opendap-subsetter` to perform HOSS operations and extract a rectangular portion of the longitude latitude grid. This will match the bounding box.\n",
     "* `sds/maskfill-harmony` to fill any pixels in the rectangular array segment, but outside the GeoJSON shape.\n",
     "\n",
-    "TODO: Add Environment.PROD once NSIC updates SPL3SMP in the production environment.\n"
+    "TODO: Add Environment.PROD once NSIDC updates SPL3SMP in the production environment.\n"
    ]
   },
   {
@@ -847,7 +855,7 @@
    "outputs": [],
    "source": [
     "if test_is_configured(hoss_shape_file_polygon_spatial_3d_info, 'collection'):\n",
-    "    hoss_shape_file_polygon_spatial_3d_file_name = 'hoss_shape_file_subset_3d.nc4'\n",
+    "    hoss_shape_file_polygon_spatial_3d_file_name = 'hoss_shape_file_3d_no_dimensions_yxz_order.nc4'\n",
     "    hoss_shape_file_polygon_spatial_3d_request = Request(\n",
     "        collection=hoss_shape_file_polygon_spatial_3d_info['collection'],\n",
     "        granule_id=hoss_shape_file_polygon_spatial_3d_info['granule_id'],\n",
@@ -866,11 +874,11 @@
     "\n",
     "    assert exists(\n",
     "        hoss_shape_file_polygon_spatial_3d_file_name\n",
-    "    ), 'Unsuccessful HOSS polygon spatial subset for 3D variables request.'\n",
+    "    ), 'Unsuccessful HOSS polygon 3D variables no dimensions not nominal order request.'\n",
     "\n",
     "    compare_results_to_reference_file(\n",
     "        hoss_shape_file_polygon_spatial_3d_file_name,\n",
-    "        'reference_files/hoss_shape_file_subset_3d_reference.nc4',\n",
+    "        'reference_files/hoss_shape_file_3d_no_dimensions_yxz_order_reference.nc4',\n",
     "        '/',\n",
     "    )\n",
     "\n",
@@ -886,14 +894,22 @@
    "source": [
     "### HOSS polygon spatial subset:  <a id=\"spatial-subset\"></a>\n",
     "\n",
-    "This request will limit the spatial extent of the returned output. This request for a polygon subset in a SPL3SMP_E granule using three steps. This can be observed via  https://harmony.uat.earthdata.nasa.gov/workflow-ui  endpoint of Harmony.\n",
+    "This request will limit the spatial extent of the returned output. This request for a polygon subset in a SPL3SMP_E granule using three steps. The SPL3SMP_E granule is an example of a 2D granule with global and polar variables without dimensions and CF attributes. The test does a spatial polygon subset of 2D global and polar variables. This can be observed via  https://harmony.uat.earthdata.nasa.gov/workflow-ui  endpoint of Harmony.\n",
     "\n",
     "* `query-cmr` to filter granules to those with matching spatial coverage.\n",
     "* `harmony-opendap-subsetter` to perform HOSS operations and extract a rectangular portion of the longitude latitude grid. This will match the bounding box.\n",
     "* `sds/maskfill-harmony` to fill any pixels in the rectangular array segment, but outside the GeoJSON shape.\n",
     "\n",
-    "TODO: Add Environment.PROD once NSIC updates SPL3SMP_E in the production environment.\n"
+    "TODO: Add Environment.PROD once NSIDC updates SPL3SMP_E in the production environment.\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f583140e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -935,7 +951,7 @@
    "outputs": [],
    "source": [
     "if test_is_configured(hoss_shape_file_polygon_spatial_info, 'collection'):\n",
-    "    hoss_shape_file_polygon_spatial_file_name = 'hoss_shape_file_subset.nc4'\n",
+    "    hoss_shape_file_polygon_spatial_file_name = 'hoss_shape_file_2d_no_dimensions.nc4'\n",
     "    hoss_shape_file_polygon_spatial_request = Request(\n",
     "        collection=hoss_shape_file_polygon_spatial_info['collection'],\n",
     "        granule_id=hoss_shape_file_polygon_spatial_info['granule_id'],\n",
@@ -960,11 +976,11 @@
     "\n",
     "    compare_results_to_reference_file(\n",
     "        hoss_shape_file_polygon_spatial_file_name,\n",
-    "        'reference_files/hoss_shape_file_subset_reference.nc4',\n",
+    "        'reference_files/hoss_shape_file_2d_no_dimensions_reference.nc4',\n",
     "        '/',\n",
     "    )\n",
     "\n",
-    "    print_success('HOSS polygon spatial subset request.')\n",
+    "    print_success('HOSS polygon 2d no dimensions spatial subset request.')\n",
     "else:\n",
     "    print(f'Skipping - HOSS is not configured for this test in {harmony_environment}.')"
    ]
@@ -986,6 +1002,12 @@
    "source": [
     "remove_results_files()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b457565b",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
@@ -1005,7 +1027,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.16"
+   "version": "3.12.9"
   },
   "name": "SDS_Regression.ipynb"
  },
