DAS-2300 - update reference file for SPL3SMP shapefile subset for bug fixed in DAS-2320

--- a/test/hoss/HOSS_Regression.ipynb
+++ b/test/hoss/HOSS_Regression.ipynb
@@ -81,7 +81,7 @@
    },
    "outputs": [],
    "source": [
-    "harmony_host_url = 'https://harmony.sit.earthdata.nasa.gov'"
+    "harmony_host_url = 'https://harmony.uat.earthdata.nasa.gov'"
    ]
   },
   {
@@ -855,7 +855,9 @@
    "outputs": [],
    "source": [
     "if test_is_configured(hoss_shape_file_polygon_spatial_3d_info, 'collection'):\n",
-    "    hoss_shape_file_polygon_spatial_3d_file_name = 'hoss_shape_file_3d_no_dimensions_yxz_order.nc4'\n",
+    "    hoss_shape_file_polygon_spatial_3d_file_name = (\n",
+    "        'hoss_shape_file_3d_no_dimensions_yxz_order.nc4'\n",
+    "    )\n",
     "    hoss_shape_file_polygon_spatial_3d_request = Request(\n",
     "        collection=hoss_shape_file_polygon_spatial_3d_info['collection'],\n",
     "        granule_id=hoss_shape_file_polygon_spatial_3d_info['granule_id'],\n",
@@ -1002,12 +1004,6 @@
    "source": [
     "remove_results_files()"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b457565b",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
