DAS-2233 - Update NSIDC regression tests to incorporate ATL08 test case.

--- a/test/nsidc-icesat2/NSIDC-ICESAT2_Regression.ipynb
+++ b/test/nsidc-icesat2/NSIDC-ICESAT2_Regression.ipynb
@@ -183,16 +183,15 @@
     "            },\n",
     "            'coords_to_rename': ['delta_time'],\n",
     "        },\n",
-    "        # BLOCKED by https://bugs.earthdata.nasa.gov/browse/DAS-2233\n",
-    "        # 'ATL08': {\n",
-    "        #     'collection_concept_id': Collection(id='C1256432189-NSIDC_CUAT'),\n",
-    "        #     'granule_id': 'G1261385533-NSIDC_CUAT',\n",
-    "        #     'temporal': {\n",
-    "        #         'start': datetime.fromisoformat(\"2022-07-31T23:01:00.000Z\"),\n",
-    "        #         'stop': datetime.fromisoformat(\"2022-07-31T23:01:10.000Z\"),\n",
-    "        #     },\n",
-    "        #     'coords_to_rename': [],\n",
-    "        # },\n",
+    "        'ATL08': {\n",
+    "            'collection_concept_id': Collection(id='C1256432189-NSIDC_CUAT'),\n",
+    "            'granule_id': 'G1261385533-NSIDC_CUAT',\n",
+    "            'temporal': {\n",
+    "                'start': datetime.fromisoformat(\"2022-07-31T23:01:00.000Z\"),\n",
+    "                'stop': datetime.fromisoformat(\"2022-07-31T23:01:10.000Z\"),\n",
+    "            },\n",
+    "            'coords_to_rename': [],\n",
+    "        },\n",
     "    },\n",
     "    'subset_by_shapefile': {\n",
     "        'ATL06': {\n",
@@ -269,16 +268,15 @@
     "            },\n",
     "            'coords_to_rename': ['delta_time'],\n",
     "        },\n",
-    "        # BLOCKED by https://bugs.earthdata.nasa.gov/browse/DAS-2233\n",
-    "        # 'ATL08': {\n",
-    "        #     'collection_concept_id': Collection(id='C2613553260-NSIDC_CPRD'),\n",
-    "        #     'granule_id': 'G1261385533-NSIDC_CUAT-TBD',\n",
-    "        #     'temporal': {\n",
-    "        #         'start': datetime.fromisoformat(\"2022-07-31T23:01:00.000Z\"),\n",
-    "        #         'stop': datetime.fromisoformat(\"2022-07-31T23:01:10.000Z\"),\n",
-    "        #     },\n",
-    "        #     'coords_to_rename': [],\n",
-    "        # },\n",
+    "        'ATL08': {\n",
+    "            'collection_concept_id': Collection(id='C2613553260-NSIDC_CPRD'),\n",
+    "            'granule_id': 'G1261385533-NSIDC_CUAT-TBD',\n",
+    "            'temporal': {\n",
+    "                'start': datetime.fromisoformat(\"2022-07-31T23:01:00.000Z\"),\n",
+    "                'stop': datetime.fromisoformat(\"2022-07-31T23:01:10.000Z\"),\n",
+    "            },\n",
+    "            'coords_to_rename': [],\n",
+    "        },\n",
     "    },\n",
     "    'subset_by_shapefile': {\n",
     "        'ATL06': {\n",
