--- a/test/nsidc-icesat2/NSIDC-ICESAT2_Regression.ipynb
+++ b/test/nsidc-icesat2/NSIDC-ICESAT2_Regression.ipynb
@@ -152,6 +152,10 @@
     "            'granule_id': 'G1261684946-NSIDC_CUAT',\n",
     "            'spatial': BBox(-112.0, 80.0, -93.0, 80.3),\n",
     "        },\n",
+    "        # The reference file currently assumes that it is expected for the\n",
+    "        # input file's number if trajectory values to be not equal to/more\n",
+    "        # than the total sum of counts in the segment group.\n",
+    "        # This will be investigated in DAS-2332.\n",
     "        'ATL08': {\n",
     "            'collection_concept_id': Collection(id='C1256432189-NSIDC_CUAT'),\n",
     "            'granule_id': 'G1260745539-NSIDC_CUAT',\n",
