DAS-2233 - Add comment for ATL08 requests in NSIDC Trajectory Subsetter notebook to note that segments haven't been verified due to potential input data issues (DAS-2332).

--- a/test/nsidc-icesat2/NSIDC-ICESAT2_Regression.ipynb
+++ b/test/nsidc-icesat2/NSIDC-ICESAT2_Regression.ipynb
@@ -152,10 +152,9 @@
     "            'granule_id': 'G1261684946-NSIDC_CUAT',\n",
     "            'spatial': BBox(-112.0, 80.0, -93.0, 80.3),\n",
     "        },\n",
-    "        # The reference file currently assumes that it is expected for the\n",
-    "        # input file's number if trajectory values to be not equal to/more\n",
-    "        # than the total sum of counts in the segment group.\n",
-    "        # This will be investigated in DAS-2332.\n",
+    "        # Segments could not be verified since the input segment index begin\n",
+    "        # and count data does not appear to accurately represent the photon\n",
+    "        # trajectories. This will be investigated in DAS-2332.\n",
     "        'ATL08': {\n",
     "            'collection_concept_id': Collection(id='C1256432189-NSIDC_CUAT'),\n",
     "            'granule_id': 'G1260745539-NSIDC_CUAT',\n",
@@ -187,6 +186,9 @@
     "            },\n",
     "            'coords_to_rename': ['delta_time'],\n",
     "        },\n",
+    "        # Segments could not be verified since the input segment index begin\n",
+    "        # and count data does not appear to accurately represent the photon\n",
+    "        # trajectories. This will be investigated in DAS-2332.\n",
     "        'ATL08': {\n",
     "            'collection_concept_id': Collection(id='C1256432189-NSIDC_CUAT'),\n",
     "            'granule_id': 'G1261385533-NSIDC_CUAT',\n",
@@ -203,6 +205,9 @@
     "            'granule_id': 'G1260779121-NSIDC_CUAT',\n",
     "            'shape': 'ancillary/Iceland_sliver.zip',\n",
     "        },\n",
+    "        # Segments could not be verified since the input segment index begin\n",
+    "        # and count data does not appear to accurately represent the photon\n",
+    "        # trajectories. This will be investigated in DAS-2332.\n",
     "        'ATL08': {\n",
     "            'collection_concept_id': Collection(id='C1256432189-NSIDC_CUAT'),\n",
     "            'granule_id': 'G1260498664-NSIDC_CUAT',\n",
