Update default env to UAT and update kernelspec to python3

--- a/test/nsidc-icesat2/NSIDC-ICESAT2_Regression.ipynb
+++ b/test/nsidc-icesat2/NSIDC-ICESAT2_Regression.ipynb
@@ -78,7 +78,7 @@
    },
    "outputs": [],
    "source": [
-    "harmony_host_url = 'https://harmony.earthdata.nasa.gov'"
+    "harmony_host_url = 'https://harmony.uat.earthdata.nasa.gov'"
    ]
   },
   {
@@ -512,9 +512,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "papermill-nsidc-icesat2",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "papermill-nsidc-icesat2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
