Atl08 test fix (#165)
Co-authored-by: asteiker <amy.steiker@gmail.com>

--- a/test/nsidc-icesat2/NSIDC-ICESAT2_Regression.ipynb
+++ b/test/nsidc-icesat2/NSIDC-ICESAT2_Regression.ipynb
@@ -191,10 +191,10 @@
     "        # trajectories. This will be investigated in DAS-2332.\n",
     "        'ATL08': {\n",
     "            'collection_concept_id': Collection(id='C1256432189-NSIDC_CUAT'),\n",
-    "            'granule_id': 'G1261385533-NSIDC_CUAT',\n",
+    "            'granule_id': 'G1260745539-NSIDC_CUAT',\n",
     "            'temporal': {\n",
-    "                'start': datetime.fromisoformat(\"2022-07-31T23:01:00.000Z\"),\n",
-    "                'stop': datetime.fromisoformat(\"2022-07-31T23:01:10.000Z\"),\n",
+    "                'start': datetime.fromisoformat(\"2021-09-25T19:02:00.000Z\"),\n",
+    "                'stop': datetime.fromisoformat(\"2021-09-25T19:05:00.000Z\"),\n",
     "            },\n",
     "            'coords_to_rename': [],\n",
     "        },\n",
@@ -279,10 +279,10 @@
     "        },\n",
     "        'ATL08': {\n",
     "            'collection_concept_id': Collection(id='C2613553260-NSIDC_CPRD'),\n",
-    "            'granule_id': 'G1261385533-NSIDC_CUAT-TBD',\n",
+    "            'granule_id': 'G2645102344-NSIDC_CPRD',\n",
     "            'temporal': {\n",
-    "                'start': datetime.fromisoformat(\"2022-07-31T23:01:00.000Z\"),\n",
-    "                'stop': datetime.fromisoformat(\"2022-07-31T23:01:10.000Z\"),\n",
+    "                'start': datetime.fromisoformat(\"2021-09-25T19:02:00.000Z\"),\n",
+    "                'stop': datetime.fromisoformat(\"2021-09-25T19:05:00.000Z\"),\n",
     "            },\n",
     "            'coords_to_rename': [],\n",
     "        },\n",
@@ -526,7 +526,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.10"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
