--- a/test/hoss/HOSS_Regression.ipynb
+++ b/test/hoss/HOSS_Regression.ipynb
@@ -713,21 +713,14 @@
     "\n",
     "This request will limit the spatial extent of the returned output. This request will be fulfilled differently depending on the UMM-S record associated with the data.\n",
     "\n",
-    "SPL3FTP_E is associated with SDS/HOSS Projection-gridded service and will call:\n",
+    "SPL3FTP_E is associated with sds/HOSS-HRS-GeoTIFF service and will call:\n",
     "  * `query-cmr` to filter granules to those with matching spatial coverage.\n",
     "  * `harmony-opendap-subsetter` to perform HOSS operations and extract a rectangular portion of the longitude latitude grid. This will match the bounding box.\n",
     "  * `maskfill-harmony` to fill any pixels in the rectangular array segment.\n",
+    "  * `harmony-metadata-annotator` to add missing metadata.\n",
     "\n",
     "TODO: Add Environment.PROD once NSIDC updates SPL3FTP_E in the production environment.\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "eb679f35",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -806,11 +799,12 @@
     "### HOSS polygon spatial subset for 3D variables - not nominal order ('yxz' order):  <a id=\"spatial-subset\"></a>\n",
     "\n",
     "A polygon spatial subset for 3D variables:\n",
-    " This request for a polygon subset of 3D variables in a SPL3SMP granule will be fulfilled using three steps. This can be observed via  https://harmony.uat.earthdata.nasa.gov/workflow-ui  endpoint of Harmony.\n",
+    " This request for a polygon subset of 3D variables in a SPL3SMP granule will be fulfilled using four steps. This can be observed via  https://harmony.uat.earthdata.nasa.gov/workflow-ui  endpoint of Harmony.\n",
     "\n",
     "* `query-cmr` to filter granules to those with matching spatial coverage.\n",
     "* `harmony-opendap-subsetter` to perform HOSS operations and extract a rectangular portion of the longitude latitude grid. This will match the bounding box.\n",
     "* `sds/maskfill-harmony` to fill any pixels in the rectangular array segment, but outside the GeoJSON shape.\n",
+    "* `harmony-metadata-annotator` to add missing metadata.\n",
     "\n",
     "TODO: Add Environment.PROD once NSIDC updates SPL3SMP in the production environment.\n"
    ]
@@ -896,22 +890,15 @@
    "source": [
     "### HOSS polygon spatial subset:  <a id=\"spatial-subset\"></a>\n",
     "\n",
-    "This request will limit the spatial extent of the returned output. This request for a polygon subset in a SPL3SMP_E granule using three steps. The SPL3SMP_E granule is an example of a 2D granule with global and polar variables without dimensions and CF attributes. The test does a spatial polygon subset of 2D global and polar variables. This can be observed via  https://harmony.uat.earthdata.nasa.gov/workflow-ui  endpoint of Harmony.\n",
+    "This request will limit the spatial extent of the returned output. This request for a polygon subset in a SPL3SMP_E granule will be fulfilled using four steps. The SPL3SMP_E granule is an example of a 2D granule with global and polar variables without dimensions and CF attributes. The test does a spatial polygon subset of 2D global and polar variables. This can be observed via  https://harmony.uat.earthdata.nasa.gov/workflow-ui  endpoint of Harmony.\n",
     "\n",
     "* `query-cmr` to filter granules to those with matching spatial coverage.\n",
     "* `harmony-opendap-subsetter` to perform HOSS operations and extract a rectangular portion of the longitude latitude grid. This will match the bounding box.\n",
     "* `sds/maskfill-harmony` to fill any pixels in the rectangular array segment, but outside the GeoJSON shape.\n",
+    "* `harmony-metadata-annotator` to add missing metadata.\n",
     "\n",
     "TODO: Add Environment.PROD once NSIDC updates SPL3SMP_E in the production environment.\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f583140e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -1009,7 +996,7 @@
  "metadata": {
   "celltoolbar": "Tags",
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "papermill-hoss",
    "language": "python",
    "name": "python3"
   },
@@ -1023,7 +1010,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.10"
   },
   "name": "SDS_Regression.ipynb"
  },
