DAS-2345 Add check to verify collection name is in expected_results dictionary

--- a/test/net2cog/net2cog_Regression.ipynb
+++ b/test/net2cog/net2cog_Regression.ipynb
@@ -281,7 +281,15 @@
     "\n",
     "            job_id = harmony_client.submit(test_request)\n",
     "            harmony_client.wait_for_processing(job_id, show_progress=True)\n",
-    "            validate_smap_outputs(harmony_client, job_id, expected_results[collection])\n",
+    "\n",
+    "            if collection in expected_results:\n",
+    "                validate_smap_outputs(\n",
+    "                    harmony_client, job_id, expected_results[collection]\n",
+    "                )\n",
+    "            else:\n",
+    "                print(\n",
+    "                    f'Skipping test: collection: {collection} is not configured expected_results dictionary'\n",
+    "                )\n",
     "else:\n",
     "    print('Skipping test: net2cog is not configured for environment')"
    ]
@@ -304,7 +312,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.17"
+   "version": "3.10.18"
   }
  },
  "nbformat": 4,
