--- a/test/hybig/HyBIG_Regression.ipynb
+++ b/test/hybig/HyBIG_Regression.ipynb
@@ -40,18 +40,7 @@
      "parameters"
     ]
    },
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mRunning cells with 'base (Python 3.13.2)' requires the ipykernel package.\n",
-      "\u001b[1;31m<a href='command:jupyter.createPythonEnvAndSelectController'>Create a Python Environment</a> with the required packages.\n",
-      "\u001b[1;31mOr install 'ipykernel' using the command: 'conda install -n base ipykernel --update-deps --force-reinstall'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "harmony_host_url = 'https://harmony.uat.earthdata.nasa.gov'"
    ]
@@ -218,7 +207,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "'''Disable this test to emergency push to prod, will be fixed in a point release shortly.\n",
     "if environment_information is not None:\n",
     "\n",
     "    scale_extent = [22, 0, 23, 1]\n",
@@ -256,8 +244,7 @@
     "\n",
     "    print_success('Conversion of ASTER Geotiff to PNG Success')\n",
     "else:\n",
-    "    print('Skipping test: HyBIG regression tests not configured for this environment.')\n",
-    "'''"
+    "    print('Skipping test: HyBIG regression tests not configured for this environment.')"
    ]
   },
   {
@@ -797,7 +784,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "'''This test appears to have been broken prior to 0.2.4, so disabling it.\n",
+    "'''This test appears to have been broken prior to 2.4.0, so disabling it.\n",
     "if environment_information is not None:\n",
     "    prefire_basename = 'PREFIRE_SAT2_2B-FLX_S07_R00_20210721013413_03040.nc.G00'\n",
     "\n",
@@ -866,7 +853,7 @@
  "metadata": {
   "celltoolbar": "Tags",
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
