Re-enabled failing HyBIG regression test

--- a/test/hybig/HyBIG_Regression.ipynb
+++ b/test/hybig/HyBIG_Regression.ipynb
@@ -265,7 +265,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "'''Disable this test to emergency push to prod, will be fixed in a point release shortly.\n",
     "if environment_information is not None:\n",
     "\n",
     "    scale_extent = [22, 0, 23, 1]\n",
@@ -301,8 +300,7 @@
     "\n",
     "    print_success('Conversion of ASTER Geotiff to JPEG Success')\n",
     "else:\n",
-    "    print('Skipping test: HyBIG regression tests not configured for this environment.')\n",
-    "'''"
+    "    print('Skipping test: HyBIG regression tests not configured for this environment.')"
    ]
   },
   {
