TRT-680: Add hashing functionality.

--- a/test/swath-projector/SwathProjector_Regression.ipynb
+++ b/test/swath-projector/SwathProjector_Regression.ipynb
@@ -41,24 +41,19 @@
    "execution_count": null,
    "id": "7ce7f640",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [],
    "source": [
+    "import sys\n",
     "from datetime import datetime\n",
     "from os.path import exists\n",
     "\n",
     "from harmony import Client, Collection, Environment, Request\n",
     "\n",
-    "from utilities import (\n",
-    "    compare_results_to_reference_file,\n",
-    "    print_success,\n",
-    "    remove_results_files,\n",
-    "    submit_and_download,\n",
-    ")"
+    "sys.path.append('../shared_utils')\n",
+    "from compare import matches_reference_hash_file_using_xarray\n",
+    "from utilities import print_success, submit_and_download"
    ]
   },
   {
@@ -188,11 +183,12 @@
     "    )\n",
     "\n",
     "    submit_and_download(harmony_client, epsg_request, epsg_file_name)\n",
-    "    assert exists(epsg_file_name), 'Unsuccessful Swath Projector EPSG code request.'\n",
     "\n",
-    "    compare_results_to_reference_file(\n",
-    "        epsg_file_name, 'reference_files/swath_projector_epsg_reference.nc4'\n",
-    "    )\n",
+    "    assert exists(epsg_file_name), 'Unsuccessful Swath Projector EPSG code request.'\n",
+    "    assert matches_reference_hash_file_using_xarray(\n",
+    "        epsg_file_name,\n",
+    "        'reference_files/swath_projector_epsg_reference.json',\n",
+    "    ), 'EPSG code output and reference files to not match'\n",
     "\n",
     "    print_success('Swath Projector EPSG code request.')\n",
     "else:\n",
@@ -230,37 +226,20 @@
     "    )\n",
     "\n",
     "    submit_and_download(harmony_client, proj4_string_request, proj4_string_file_name)\n",
+    "\n",
     "    assert exists(\n",
     "        proj4_string_file_name\n",
     "    ), 'Unsuccessful Swath Projector interpolation and Proj4 request.'\n",
-    "\n",
-    "    compare_results_to_reference_file(\n",
-    "        proj4_string_file_name, 'reference_files/swath_projector_proj4_reference.nc4'\n",
-    "    )\n",
+    "    assert matches_reference_hash_file_using_xarray(\n",
+    "        proj4_string_file_name,\n",
+    "        'reference_files/swath_projector_proj4_reference.json',\n",
+    "    ), 'Proj4 string output and reference files to not match'\n",
     "\n",
     "    print_success('Swath Projector interpolation and Proj4 request')\n",
     "else:\n",
     "    print(\n",
     "        f'The Swath Projector is not configured for environment: \"{harmony_environment}\" - skipping test.'\n",
     "    )"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "1312de28",
-   "metadata": {},
-   "source": [
-    "## Clean up results files:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "73fdd147-74a0-48d3-957f-388e2abe356a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "remove_results_files()"
    ]
   }
  ],
@@ -281,7 +260,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.12.11"
   },
   "name": "SDS_Regression.ipynb"
  },
