DAS-2355: Updates regridder regression test

--- a/test/regridder/Regridder_Regression.ipynb
+++ b/test/regridder/Regridder_Regression.ipynb
@@ -9,7 +9,12 @@
     "\n",
     "This Jupyter notebook runs a suite of regression tests against some requests against the Harmony Regridding Service.\n",
     "\n",
-    "These tests use the a MERRA-2 hourly collection of time averaged data ([M2T1NXSLV](https://cmr.earthdata.nasa.gov/search/concepts/C1276812863-GES_DISC.html)) and the ICESat-2/ATL16 Weekly Gridded Atmosphere collection ([ATL16](https://cmr.earthdata.nasa.gov/search/concepts/C2153575232-NSIDC_CPRD.html)) available from GES DISC and NSIDC, respectively.\n",
+    "These tests use a variety of input data to exercise the service:\n",
+    " - MERRA-2 hourly collection of time averaged data ([M2T1NXSLV](https://cmr.earthdata.nasa.gov/search/concepts/C1276812863-GES_DISC.html)) \n",
+    " - ICESat-2/ATL16 Weekly Gridded Atmosphere collection ([ATL16](https://cmr.earthdata.nasa.gov/search/concepts/C2153575232-NSIDC_CPRD.html))\n",
+    " - SMAP L4 Global 3-hourly 9 km EASE-Grid Surface and Root Zone Soil Moisture Analysis Update V007 ([SPL4MAU](https://search.uat.earthdata.nasa.gov/search/granules?p=C1268612113-EEDTEST))\n",
+    " - SMAP L3 Radiometer Global and Northern Hemisphere Daily 36 km EASE-Grid Freeze/Thaw State V004 ([SPL3FTP](https://search.uat.earthdata.nasa.gov/search/granules?p=C1268617120-EEDTEST))\n",
+    "\n",
     "\n",
     "\n",
     "## Set the Harmony environment:\n",
@@ -38,7 +43,7 @@
    },
    "outputs": [],
    "source": [
-    "harmony_host_url = 'https://harmony.uat.earthdata.nasa.gov'"
+    "harmony_host_url = \"https://harmony.uat.earthdata.nasa.gov\""
    ]
   },
   {
@@ -70,7 +75,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from harmony import Collection, Environment, Client, Request\n",
+    "from harmony import Collection, Environment, Client, Request, BBox\n",
     "from tempfile import TemporaryDirectory\n",
     "\n",
     "from pathlib import Path"
@@ -93,7 +98,7 @@
    "source": [
     "import sys\n",
     "\n",
-    "sys.path.append('../shared_utils')\n",
+    "sys.path.append(\"../shared_utils\")\n",
     "from utilities import print_success, submit_and_download\n",
     "from compare import compare_results_to_reference_file"
    ]
@@ -118,39 +123,43 @@
    "outputs": [],
    "source": [
     "non_production_collection = {\n",
-    "    'merra_collection': Collection(id='C1245662776-EEDTEST'),\n",
-    "    'atl16_collection': Collection(id='C1238589498-EEDTEST'),\n",
+    "    \"merra_collection\": Collection(id=\"C1245662776-EEDTEST\"),\n",
+    "    \"atl16_collection\": Collection(id=\"C1238589498-EEDTEST\"),\n",
+    "    \"spl4smau_collection\": Collection(id=\"C1268612113-EEDTEST\"),\n",
+    "    \"spl3ftp_collection\": Collection(id=\"C1268617120-EEDTEST\"),\n",
     "}\n",
     "\n",
     "non_prod_granule_data = {\n",
-    "    'merra_granules': ['G1245662793-EEDTEST', 'G1245662791-EEDTEST'],\n",
-    "    'atl16_granules': ['G1245614996-EEDTEST', 'G1245614968-EEDTEST'],\n",
+    "    \"merra_granules\": [\"G1245662793-EEDTEST\", \"G1245662791-EEDTEST\"],\n",
+    "    \"atl16_granules\": [\"G1245614996-EEDTEST\", \"G1245614968-EEDTEST\"],\n",
+    "    \"spl4smau_granules\": [\"G1268612119-EEDTEST\"],\n",
+    "    \"spl3ftp_granules\": [\"G1268617163-EEDTEST\"],\n",
     "}\n",
     "\n",
     "\n",
     "collection_data = {\n",
-    "    'https://harmony.uat.earthdata.nasa.gov': {\n",
+    "    \"https://harmony.uat.earthdata.nasa.gov\": {\n",
     "        **non_production_collection,\n",
     "        **non_prod_granule_data,\n",
-    "        'env': Environment.UAT,\n",
+    "        \"env\": Environment.UAT,\n",
     "    },\n",
-    "    'https://harmony.sit.earthdata.nasa.gov': {\n",
+    "    \"https://harmony.sit.earthdata.nasa.gov\": {\n",
     "        **non_production_collection,\n",
     "        **non_prod_granule_data,\n",
-    "        'env': Environment.SIT,\n",
+    "        \"env\": Environment.SIT,\n",
     "    },\n",
-    "    'http://localhost:3000': {\n",
+    "    \"http://localhost:3000\": {\n",
     "        **non_production_collection,\n",
     "        **non_prod_granule_data,\n",
-    "        'env': Environment.LOCAL,\n",
+    "        \"env\": Environment.LOCAL,\n",
     "    },\n",
     "}\n",
     "\n",
     "environment_information = collection_data.get(harmony_host_url)\n",
     "\n",
     "if environment_information is not None:\n",
-    "    harmony_client = Client(env=environment_information['env'])\n",
-    "    endpoint_url = environment_information.get('endpoint_url', None)"
+    "    harmony_client = Client(env=environment_information[\"env\"])\n",
+    "    endpoint_url = environment_information.get(\"endpoint_url\", None)"
    ]
   },
   {
@@ -175,19 +184,19 @@
     "if environment_information is not None:\n",
     "    with TemporaryDirectory() as temp_dir:\n",
     "        merra_request = Request(\n",
-    "            collection=environment_information['merra_collection'],\n",
-    "            granule_id=environment_information['merra_granules'][0],\n",
-    "            interpolation='Elliptical Weighted Averaging',\n",
+    "            collection=environment_information[\"merra_collection\"],\n",
+    "            granule_id=environment_information[\"merra_granules\"][0],\n",
+    "            interpolation=\"Elliptical Weighted Averaging\",\n",
     "            scale_size=(2.5, 2.5),\n",
     "            scale_extent=(-180, -90, 180, 90),\n",
-    "            crs='+proj=latlong +datum=WGS84 +no_defs',\n",
+    "            crs=\"+proj=latlong +datum=WGS84 +no_defs\",\n",
     "            height=72,\n",
     "            width=144,\n",
     "        )\n",
     "\n",
-    "        test_output = temp_dir / Path('MERRA2_test.h5')\n",
+    "        test_output = temp_dir / Path(\"MERRA2_test.h5\")\n",
     "        test_reference = Path(\n",
-    "            'reference_data/MERRA2_400.tavg1_2d_slv_Nx.20210605_regridded.nc4'\n",
+    "            \"reference_data/MERRA2_400.tavg1_2d_slv_Nx.20210605_regridded.nc4\"\n",
     "        )\n",
     "\n",
     "        submit_and_download(harmony_client, merra_request, test_output)\n",
@@ -196,10 +205,10 @@
     "\n",
     "        compare_results_to_reference_file(test_output, test_reference, identical=False)\n",
     "\n",
-    "    print_success('Regrid MERRA2 Data Success')\n",
+    "    print_success(\"Regrid MERRA2 Data Success\")\n",
     "else:\n",
     "    print(\n",
-    "        'Skipping test: regridder regression tests not configured for this environment.'\n",
+    "        \"Skipping test: regridder regression tests not configured for this environment.\"\n",
     "    )"
    ]
   },
@@ -254,6 +263,107 @@
     "        'Skipping test: regridder regression tests not configured for this environment.'\n",
     "    )"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "46f057e8-2dde-4c8f-bbc1-c57a7cdf6850",
+   "metadata": {},
+   "source": [
+    "# Test SPL4SMAU\n",
+    "\n",
+    "The SPL4SMAU test is designed to show that data with projected coordinates can be correctly resampled to geographic output.\n",
+    "\n",
+    "A small 7 degree grid is chosen to save space."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eeeeeb0c-52ba-4a93-9b1e-cb0338012175",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if environment_information is not None:\n",
+    "    with TemporaryDirectory() as temp_dir:\n",
+    "        spl4mau_request = Request(\n",
+    "            collection=environment_information['spl4smau_collection'],\n",
+    "            granule_id=environment_information['spl4smau_granules'][0],\n",
+    "            interpolation='Elliptical Weighted Averaging',\n",
+    "            scale_size=(7.0, 7.0),\n",
+    "            scale_extent=(-180, -90, 180, 90),\n",
+    "            crs='EPSG:4326',\n",
+    "        )\n",
+    "\n",
+    "        test_output = temp_dir / Path(\"SPL4SMAU_test.h5\")\n",
+    "        test_reference = Path('reference_data/SPL4SMAU_test_reference.h5')\n",
+    "\n",
+    "        submit_and_download(harmony_client, spl4mau_request, test_output)\n",
+    "\n",
+    "        assert (\n",
+    "            test_output.exists()\n",
+    "        ), 'Unsuccessful Harmony Request: SPL4MAU (projected dimensions)'\n",
+    "\n",
+    "        compare_results_to_reference_file(test_output, test_reference, identical=False)\n",
+    "\n",
+    "    print_success('Regrid SPL4MAU Data Success')\n",
+    "else:\n",
+    "    print(\n",
+    "        'Skipping test: regridder regression tests not configured for this environment.'\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a13f30ce-fc80-46d0-b553-e42bc91f9bf0",
+   "metadata": {},
+   "source": [
+    "# Test SPL3FTP\n",
+    "\n",
+    "The SPL3FTP test is designed to demonstrate implicit grid determination for projected data with muliple souce grids.\n",
+    "\n",
+    "A small 7 degree grid is chosen to save space."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f37bbd32-2de2-4fb8-a6b3-2b5d79bda3a8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if environment_information is not None:\n",
+    "    with TemporaryDirectory() as temp_dir:\n",
+    "        spl3ftp_request = Request(\n",
+    "            collection=environment_information['spl3ftp_collection'],\n",
+    "            granule_id=environment_information['spl3ftp_granules'][0],\n",
+    "            interpolation='Elliptical Weighted Averaging',\n",
+    "            crs='EPSG:4326',\n",
+    "            variables=[\n",
+    "                \"Freeze_Thaw_Retrieval_Data_Global/altitude_dem\",\n",
+    "                \"Freeze_Thaw_Retrieval_Data_Global/freeze_reference\",\n",
+    "                \"Freeze_Thaw_Retrieval_Data_Polar/altitude_dem\",\n",
+    "                \"Freeze_Thaw_Retrieval_Data_Polar/freeze_reference\",\n",
+    "            ],\n",
+    "            spatial=BBox(w=-70, s=60, e=-10, n=85),\n",
+    "        )\n",
+    "\n",
+    "        test_output = temp_dir / Path(\"SPL3FTP_test.h5\")\n",
+    "        test_reference = Path('reference_data/SPL3FTP_test_reference.h5')\n",
+    "\n",
+    "        submit_and_download(harmony_client, spl3ftp_request, test_output)\n",
+    "\n",
+    "        assert (\n",
+    "            test_output.exists()\n",
+    "        ), 'Unsuccessful Harmony Request: SPL3FTP (Implicit Grids)'\n",
+    "\n",
+    "        compare_results_to_reference_file(test_output, test_reference, identical=False)\n",
+    "\n",
+    "    print_success('Regrid SPL3FTP Data Success')\n",
+    "else:\n",
+    "    print(\n",
+    "        'Skipping test: regridder regression tests not configured for this environment.'\n",
+    "    )"
+   ]
   }
  ],
  "metadata": {
@@ -273,7 +383,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.10"
   },
   "name": "Regridder_Regression.ipynb"
  },
