DAS-2355: clean up test comment

--- a/test/regridder/Regridder_Regression.ipynb
+++ b/test/regridder/Regridder_Regression.ipynb
@@ -321,7 +321,7 @@
     "\n",
     "The SPL3FTP test is designed to demonstrate implicit grid determination for projected data with muliple souce grids.\n",
     "\n",
-    "A small 7 degree grid is chosen to save space."
+    "The request is sent through the sds/HOSS-regridder-reformatter service chain and subset to an area around Greenland as well as just 2 selected variables to reduce the output file size."
    ]
   },
   {
