DAS-NONE: two step rename to eliminate CAPS

--- a/test/rimagenator/rimagenator_Regression.ipynb
+++ b/test/rimagenator/rimagenator_Regression.ipynb
@@ -5,10 +5,10 @@
    "id": "4609a539",
    "metadata": {},
    "source": [
-    "# IMAGENATOR Regression Tests\n",
+    "# imagenator Regression Tests\n",
     "\n",
-    "This notebook runs a suite of regression tests against the Harmony IMAGENATOR Service chain.\n",
-    "These tests use a sample TEMPO NO₂ granule to verify that IMAGENATOR logic works as expected and that output matches reference data in `reference_data/`.\n"
+    "This notebook runs a suite of regression tests against the Harmony imagenator Service chain.\n",
+    "These tests use a sample TEMPO NO₂ granule to verify that imagenator logic works as expected and that output matches reference data in `reference_data/`.\n"
    ]
   },
   {
@@ -64,7 +64,7 @@
    "id": "6c4efdf1",
    "metadata": {},
    "source": [
-    "### Set up environment-dependent variables for IMAGENATOR L2:\n",
+    "### Set up environment-dependent variables for imagenator L2:\n",
     "\n",
     "Define the collection and granule for testing in each environment."
    ]
@@ -107,7 +107,7 @@
     "    filter_collection = environment_information['filter_collection']\n",
     "    filter_granule = environment_information['filter_granules'][0]\n",
     "else:\n",
-    "    print('Skipping tests: IMAGENATOR L2 is not configured for environment')"
+    "    print('Skipping tests: imagenator L2 is not configured for environment')"
    ]
   },
   {
@@ -115,7 +115,7 @@
    "id": "e75ca9df",
    "metadata": {},
    "source": [
-    "## Test: IMAGENATOR L2 request on TEMPO NO2 vertical_column_stratosphere variable\n",
+    "## Test: imagenator L2 request on TEMPO NO2 vertical_column_stratosphere variable\n",
     "\n",
     "Submit a single-granule request and validate output files."
    ]
@@ -173,7 +173,7 @@
       "\u001b[92mSuccess: TEMPO_NO2_L2_V03_20240801T195948Z_S012G02_regridded_filtered_product_vertical_column_stratosphere_reformatted.pgw matches reference.\u001b[0m\n",
       "Validating 6268818_TEMPO_NO2_L2_V03_20240801T195948Z_S012G02_regridded_filtered_product_vertical_column_stratosphere_reformatted.png.aux.xml → TEMPO_NO2_L2_V03_20240801T195948Z_S012G02_regridded_filtered_product_vertical_column_stratosphere_reformatted.png.aux.xml (level=L2)...\n",
       "\u001b[92mSuccess: TEMPO_NO2_L2_V03_20240801T195948Z_S012G02_regridded_filtered_product_vertical_column_stratosphere_reformatted.png.aux.xml matches reference.\u001b[0m\n",
-      "\u001b[92mSuccess: All IMAGENATOR outputs match their reference files!\u001b[0m\n"
+      "\u001b[92mSuccess: All imagenator outputs match their reference files!\u001b[0m\n"
      ]
     }
    ],
@@ -191,7 +191,7 @@
     "    # Validate against reference_data/\n",
     "    validate_imagenator_outputs(harmony_client, job_id)\n",
     "else:\n",
-    "    print('Skipping test: IMAGENATOR L2 not configured for environment')"
+    "    print('Skipping test: imagenator L2 not configured for environment')"
    ]
   },
   {
@@ -199,7 +199,7 @@
    "id": "4252b16d-c5c2-4cc3-8004-1d7695641782",
    "metadata": {},
    "source": [
-    "### Set up environment-dependent variables for IMAGENATOR L3:\n",
+    "### Set up environment-dependent variables for imagenator L3:\n",
     "\n",
     "Define the collection and granule for testing in each environment."
    ]
@@ -242,7 +242,7 @@
     "    filter_collection = environment_information['filter_collection']\n",
     "    filter_granule = environment_information['filter_granules'][0]\n",
     "else:\n",
-    "    print('Skipping tests: IMAGENATOR L3 is not configured for environment')"
+    "    print('Skipping tests: imagenator L3 is not configured for environment')"
    ]
   },
   {
@@ -250,7 +250,7 @@
    "id": "7a28b942-9775-47e8-bcb0-26e1ab5f6988",
    "metadata": {},
    "source": [
-    "## Test: IMAGENATOR L3 request on TEMPO NO2 vertical_column_stratosphere variable\n",
+    "## Test: imagenator L3 request on TEMPO NO2 vertical_column_stratosphere variable\n",
     "\n",
     "Submit a single-granule request and validate output files."
    ]
@@ -308,7 +308,7 @@
       "\u001b[92mSuccess: TEMPO_NO2_L3_V03_20240822T114056Z_S002_filtered_product_vertical_column_stratosphere_reformatted.pgw matches reference.\u001b[0m\n",
       "Validating 6268822_TEMPO_NO2_L3_V03_20240822T114056Z_S002_filtered_product_vertical_column_stratosphere_reformatted.png.aux.xml → TEMPO_NO2_L3_V03_20240822T114056Z_S002_filtered_product_vertical_column_stratosphere_reformatted.png.aux.xml (level=L3)...\n",
       "\u001b[92mSuccess: TEMPO_NO2_L3_V03_20240822T114056Z_S002_filtered_product_vertical_column_stratosphere_reformatted.png.aux.xml matches reference.\u001b[0m\n",
-      "\u001b[92mSuccess: All IMAGENATOR outputs match their reference files!\u001b[0m\n"
+      "\u001b[92mSuccess: All imagenator outputs match their reference files!\u001b[0m\n"
      ]
     }
    ],
@@ -326,7 +326,7 @@
     "    # Validate against reference_data/\n",
     "    validate_imagenator_outputs(harmony_client, job_id)\n",
     "else:\n",
-    "    print('Skipping test: IMAGENATOR L3 not configured for environment')"
+    "    print('Skipping test: imagenator L3 not configured for environment')"
    ]
   },
   {
