TRT-500: Update IMAGENATOR config.

--- a/test/imagenator/imagenator_Regression.ipynb
+++ b/test/imagenator/imagenator_Regression.ipynb
@@ -33,9 +33,9 @@
    "source": [
     "## Prerequisites\n",
     "\n",
-    "- Create the `papermill-filtering` environment:\n",
+    "- Create the `papermill-imagenator` environment:\n",
     "  ```bash\n",
-    "  conda env create -f ./environment.yaml && conda activate papermill-filtering\n",
+    "  conda env create -f ./environment.yaml && conda activate papermill-imagenator\n",
     "  ```\n",
     "- Ensure a `.netrc` file with your Earthdata Login credentials is present here.\n"
    ]
